Introduce uc.server.props system prop to be the path of server.properties